# PluginDeepSeekBalance

./: .gitignore  CMakeLists.txt  LICENSE  PluginDeepSeekBalance.cpp  PluginDeepSeekBalance.rc  PluginInterface.h  README.md  dllmain.cpp  mingw-toolchain.cmake  resource.h
Claude/: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  PluginClaudeBalance.cpp  PluginClaudeBalance.h  PluginClaudeBalance.rc  dllmain.cpp  resource.h
Codex/: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  PluginCodexBalance.cpp  PluginCodexBalance.h  PluginCodexBalance.rc  dllmain.cpp  resource.h
DeepSeek/: BalanceItem.cpp  CMakeLists.txt  PluginDeepSeekBalance.cpp  PluginDeepSeekBalance.h
Gemini/: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  PluginGeminiBalance.cpp  PluginGeminiBalance.h  PluginGeminiBalance.rc  dllmain.cpp  resource.h
MiMo/: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  PluginMiMoBalance.cpp  PluginMiMoBalance.h  PluginMiMoBalance.rc  dllmain.cpp  resource.h
MiniMax/: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  PluginMiniMaxBalance.cpp  PluginMiniMaxBalance.h  PluginMiniMaxBalance.rc  dllmain.cpp  resource.h
ZAI/: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  PluginZAIBalance.cpp  PluginZAIBalance.h  PluginZAIBalance.rc  dllmain.cpp
build_codex/: CMakeCache.txt  Makefile  cmake_install.cmake
build_codex/Codex/: Makefile  cmake_install.cmake
build_codex/DeepSeek/: Makefile  cmake_install.cmake
deepseek/: BalanceItem.h  resource.h
